--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,31 +1,30 @@
-@font-face{
+@font-face {
     font-family: Fonttype;
     src: url("/fonts/static/Raleway-Regular.ttf");
 }
 
-body{
+body {
     height: 100%;
     width: 100%;
     margin: 0%;
     background-color: rgb(245, 245, 245);
-    font-family:'Fonttype';
+    font-family: 'Fonttype';
 }
 
-#container{
+#container {
     max-width: 100%;
-    text-align:center;
+    text-align: center;
     padding-top: 12%;
-    
 }
 
-#logo{
+#logo {
     display: inline-block;
     max-width: 25%;
     margin-left: 3%;
     margin-right: 3%;
 }
 
-#login-container{
+#login-container {
     display: inline-block;
     margin-left: 3%;
     margin-right: 3%;
@@ -37,7 +36,7 @@ body{
     border-radius: 8px;
 }
 
-#user_name{
+#user_name {
     display: flex;
     margin-bottom: 4%;
     margin-left: auto;
@@ -45,10 +44,10 @@ body{
     font-size: 20px;
     border-radius: 4px;
     border-style: solid;
-    font-family:'Fonttype';
+    font-family: 'Fonttype';
 }
 
-#password{
+#password {
     display: flex;
     margin-top: 4%;
     margin-bottom: 4%;
@@ -57,10 +56,10 @@ body{
     font-size: 20px;
     border-radius: 4px;
     border-style: solid;
-    font-family:'Fonttype';
+    font-family: 'Fonttype';
 }
 
-#submit{
+#submit {
     display: flex;
     margin-top: 6%;
     margin-bottom: 4%;
@@ -76,28 +75,28 @@ body{
     padding-left: 3%;
     padding-right: 3%;
     cursor: pointer;
-    font-family:'Fonttype';
+    font-family: 'Fonttype';
     transition-duration: 0.7s;
 }
 
-#submit:hover{
-    background-color: rgb(114,186,213);
+#submit:hover {
+    background-color: rgb(114, 186, 213);
 }
 
 #submit:active {
     transform: translateY(4px);
 }
 
-#forgot{
+#forgot {
     text-decoration: none;
     color: black;
 }
 
-#errorMsg{
+#errorMsg {
     color: red;
 }
 
-#create{
+#create {
     display: flex;
     margin-top: 6%;
     margin-left: auto;
@@ -112,12 +111,12 @@ body{
     padding-left: 3.5%;
     padding-right: 3.5%;
     cursor: pointer;
-    font-family:'Fonttype';
+    font-family: 'Fonttype';
     transition-duration: 0.7s;
 }
 
-#create:hover{
-    background-color: rgb(114,186,213);
+#create:hover {
+    background-color: rgb(114, 186, 213);
 }
 
 #create:active {
@@ -147,31 +146,30 @@ footer a {
     transition-duration: 0.5s;
 }
 
-footer a:hover{
-    color:rgb(114,186,213);
+footer a:hover {
+    color: rgb(114, 186, 213);
 }
 
 .footer-section {
     display: grid;
     padding: 3%;
+    text-align: left;
+    justify-content: center;
 }
 
-
 @media only screen and (max-width: 720px) {
-    #logo{
+    #logo {
         display: flex;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 5%;
         max-width: 70%;
     }
-
-    #login-container{
+    #login-container {
         padding: 4%;
         margin-top: 5%;
     }
-
-    #desktop-footer{
+    #desktop-footer {
         display: grid;
         width: 100%;
         grid-template-columns: 1fr 1fr;
@@ -179,9 +177,7 @@ footer a:hover{
         align-items: center;
         padding-bottom: 3%;
     }
-
-    #about-us{
+    #about-us {
         display: none;
     }
-
 }
